# goph419-f2025-lab01-stAK

./: README.md  pyproject.toml
examples/: driver.py
src/goph419lab01/: functions.py
src/python_package/: functions.py
tests/: test_code.py
